--- a/index.html
+++ b/index.html
@@ -153,26 +153,28 @@
     </main>
     <!-- підвал -->
     <footer class="page-footer">
-      <a href="./index.html" class="footer-logo"> <span class="part-logo">Web</span>Studio</a>
-      <address class="footer-address">
-        <ul class="footer-items">
-          <li class="footer-iteam">
-            <a
-              href="https://goo.gl/maps/dctksCRWfAqpbNxq5"
-              class="footer-street"
-              target="_blank"
-              rel="nooperer noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="footer-iteam">
-            <a href="info@devstudio.com" class="footer-link">info@devstudio.com</a>
-          </li>
-          <li class="footer-iteam">
-            <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="conteiner footer-content">
+        <a href="./index.html" class="footer-logo"> <span class="part-logo">Web</span>Studio</a>
+        <address class="footer-address">
+          <ul class="footer-items">
+            <li class="footer-iteam">
+              <a
+                href="https://goo.gl/maps/dctksCRWfAqpbNxq5"
+                class="footer-street"
+                target="_blank"
+                rel="nooperer noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="footer-iteam">
+              <a href="info@devstudio.com" class="footer-link">info@devstudio.com</a>
+            </li>
+            <li class="footer-iteam">
+              <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
