--- a/portfolio.html
+++ b/portfolio.html
@@ -14,142 +14,157 @@
   <body>
     <!-- хедер -->
     <header class="page-header">
-      <div class="conteiner"></div>
-      <nav class="nav">
-        <a class="nav-logo" href="./index.html"> <span class="part-logo">Web</span>Studio</a>
-        <ul class="nav-items">
-          <li class="list-link"><a class="nav-link" href="./index.html">Студія</a></li>
-          <li class="list-link">
-            <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
+      <div class="conteiner">
+        <nav class="nav">
+          <a class="nav-logo" href="./index.html"> <span class="part-logo">Web</span>Studio</a>
+          <ul class="nav-items">
+            <li class="list-link"><a class="nav-link" href="./index.html">Студія</a></li>
+            <li class="list-link">
+              <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="list-link"><a class="nav-link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts-items">
+          <li>
+            <a class="contact-link" href="info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="list-link"><a class="nav-link" href="">Контакти</a></li>
+          <li>
+            <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts-items">
-        <li>
-          <a class="contact-link" href="info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
       </div>
     </header>
     <!-- контент портфоліо -->
     <main class="portfolio-content">
       <section class="section-portfolio">
-        <h1>фільтри проєтів</h1>
-        <ul class="filters">
-          <li><button type="button" class="filters-button">Усі</button></li>
-          <li><button type="button" class="filters-button">Веб-сайти</button></li>
-          <li><button type="button" class="filters-button">Додатки</button></li>
-          <li><button type="button" class="filters-button">Дизайн</button></li>
-          <li><button type="button" class="filters-button">Маркетинг</button></li>
-        </ul>
-        <ul class="project">
-          <li class="projects-iteam">
-            <a class="project-card" href="#">
-              <img
-                src="./images/portfolio1.jpg"
-                alt="Прев'ю проекта Технокряк"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Технокряк</h2>
-              <p class="project-text">Веб-сайт</p></a
-            >
-          </li>
-          <li class="projects-item">
-            <a class="project-card" href="#"
-              ><img
-                src="./images/portfolio2.jpg"
-                alt="постер гравців баскетболу"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="project-text">Дизайн</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#"
-              ><img
-                src="./images/portfolio3.jpg"
-                alt="логотип ресторану"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="project-text">Додаток</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#">
-              <img src="./images/portfolio4.jpg" alt="наушники" width="370" height="294" />
-              <h2 class="project-title">Проєкт <span lang="en">Prime</span></h2>
-              <p class="project-text">Маркетинг</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#"
-              ><img src="./images/portfolio5.jpg" alt="коробки" width="370" height="294" />
-              <h2 class="project-title">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="project-text">Додаток</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#"
-              ><img src="./images/portfolio6.jpg" alt="компютер" width="370" height="294" />
-              <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
-              <p class="project-text">Веб-сайт</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#"
-              ><img src="./images/portfolio7.jpg" alt="книга" width="370" height="294" />
-              <h2 class="project-title">Видання <span lang="en">Limited Edition</span></h2>
-              <p class="project-text">Дизайн</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#"
-              ><img src="./images/portfolio8.jpg" alt="етикетка" width="370" height="294" />
-              <h3 class="project-title">Проєкт <span lang="en">LAB</span></h3>
-              <p class="project-text">Маркетинг</p></a
-            >
-          </li>
-          <li class="projects-iteam">
-            <a class="project-card" href="#"
-              ><img src="./images/portfolio9.jpg" alt="ноутбук" width="370" height="294" />
-              <h2 lang="en" class="project-title">Growing Business</h2>
-              <p class="project-text">Додаток</p></a
-            >
-          </li>
-        </ul>
+        <h1 hidden>фільтри проєтів</h1>
+        <div class="conteiner">
+          <ul class="filters">
+            <li class="filters-item"><button type="button" class="filters-button">Усі</button></li>
+            <li class="filters-item">
+              <button type="button" class="filters-button">Веб-сайти</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-button">Додатки</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-button">Дизайн</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-button">Маркетинг</button>
+            </li>
+          </ul>
+
+          <ul class="project">
+            <li class="projects-iteam">
+              <a class="project-card" href="#">
+                <img
+                  src="./images/portfolio1.jpg"
+                  alt="Прев'ю проекта Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="project-title">Технокряк</h2>
+                <p class="project-text">Веб-сайт</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img
+                  src="./images/portfolio2.jpg"
+                  alt="постер гравців баскетболу"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="project-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="project-text">Дизайн</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img
+                  src="./images/portfolio3.jpg"
+                  alt="логотип ресторану"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="project-text">Додаток</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#">
+                <img src="./images/portfolio4.jpg" alt="наушники" width="370" height="294" />
+                <h2 class="project-title">Проєкт <span lang="en">Prime</span></h2>
+                <p class="project-text">Маркетинг</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img src="./images/portfolio5.jpg" alt="коробки" width="370" height="294" />
+                <h2 class="project-title">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="project-text">Додаток</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img src="./images/portfolio6.jpg" alt="компютер" width="370" height="294" />
+                <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
+                <p class="project-text">Веб-сайт</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img src="./images/portfolio7.jpg" alt="книга" width="370" height="294" />
+                <h2 class="project-title">Видання <span lang="en">Limited Edition</span></h2>
+                <p class="project-text">Дизайн</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img src="./images/portfolio8.jpg" alt="етикетка" width="370" height="294" />
+                <h3 class="project-title">Проєкт <span lang="en">LAB</span></h3>
+                <p class="project-text">Маркетинг</p></a
+              >
+            </li>
+            <li class="projects-iteam">
+              <a class="project-card" href="#"
+                ><img src="./images/portfolio9.jpg" alt="ноутбук" width="370" height="294" />
+                <h2 lang="en" class="project-title">Growing Business</h2>
+                <p class="project-text">Додаток</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- футер -->
     <footer class="page-footer">
-      <a href="./index.html" class="footer-logo"> <span class="part-logo">Web</span>Studio</a>
-      <address class="footer-address">
-        <ul class="footer-items">
-          <li class="footer-iteam">
-            <a
-              href="https://goo.gl/maps/dctksCRWfAqpbNxq5"
-              class="footer-street"
-              target="_blank"
-              rel="nooperer noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="footer-iteam">
-            <a href="info@devstudio.com" class="footer-link">info@devstudio.com</a>
-          </li>
-          <li class="footer-iteam">
-            <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="conteiner footer-content">
+        <a href="./index.html" class="footer-logo"> <span class="part-logo">Web</span>Studio</a>
+        <address class="footer-address">
+          <ul class="footer-items">
+            <li class="footer-iteam">
+              <a
+                href="https://goo.gl/maps/dctksCRWfAqpbNxq5"
+                class="footer-street"
+                target="_blank"
+                rel="nooperer noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="footer-iteam">
+              <a href="info@devstudio.com" class="footer-link">info@devstudio.com</a>
+            </li>
+            <li class="footer-iteam">
+              <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
