--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -26,10 +33,10 @@
           </ul>
         </nav>
         <ul class="contacts-items">
-          <li>
+          <li class="contact-list">
             <a class="contact-link" href="info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="contact-list">
             <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -38,7 +45,7 @@
     <!-- контент портфоліо -->
     <main class="portfolio-content">
       <section class="section-portfolio">
-        <h1 hidden>фільтри проєтів</h1>
+        <h1 class="visually-hidden">фільтри проєтів</h1>
         <div class="conteiner">
           <ul class="filters">
             <li class="filters-item"><button type="button" class="filters-button">Усі</button></li>
