--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="contact-list">
             <a class="contact-link" href="info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="contact-list">
             <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -55,7 +55,7 @@
       <!-- переваги -->
       <section class="about-section">
         <div class="conteiner">
-          <h2 hidden>Особливості</h2>
+          <h2 class="visually-hidden">Особливості</h2>
           <ul class="about-items">
             <li class="about-list">
               <h3 class="about-title">увага до деталей</h3>
