--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 alt="jobs"
                 width="370"
                 height="294"
-                class="benefits-img"
+                class="image-block"
               />
             </li>
             <li class="benefit-item">
@@ -104,7 +104,7 @@
                 alt="jobs"
                 width="370"
                 height="294"
-                class="benefits-img"
+                class="image-block"
               />
             </li>
             <li class="benefit-item">
@@ -113,7 +113,7 @@
                 alt="jobs"
                 width="370"
                 height="294"
-                class="benefits-img"
+                class="image-block"
               />
             </li>
           </ul>
@@ -125,27 +125,32 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-items">
             <li class="team-item">
-              <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270" class="team-img" />
-
-              <h3 class="title-name">Ігор Дем'яненко</h3>
-              <p class="job-title">Product Designer</p>
+              <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270" class="image-block" />
+              <div class="job-title">
+                <h3 class="title-name">Ігор Дем'яненко</h3>
+                <p class="job-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
-              <img src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" class="team-img" />
-
-              <h3 class="title-name">Ольга Рєпіна</h3>
-              <p class="job-title">Frontend Developer</p>
+              <img src="./images/img2.jpg" alt="Ольга Рєпіна" width="270" class="image-block" />
+              <div class="job-title">
+                <h3 class="title-name">Ольга Рєпіна</h3>
+                <p class="job-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
-              <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" class="team-img" />
-
-              <h3 class="title-name">Микола Тарасов</h3>
-              <p class="job-title">Marketing</p>
+              <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" class="image-block" />
+              <div class="job-title">
+                <h3 class="title-name">Микола Тарасов</h3>
+                <p class="job-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
-              <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" class="team-img" />
-              <h3 class="title-name">Михайло Єрмаков</h3>
-              <p class="job-title">UI Designer</p>
+              <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" class="image-block" />
+              <div class="job-title">
+                <h3 class="title-name">Михайло Єрмаков</h3>
+                <p class="job-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
