--- a/portfolio.html
+++ b/portfolio.html
@@ -45,20 +45,20 @@
     <!-- контент портфоліо -->
     <main class="portfolio-content">
       <section class="section-portfolio">
-        <h1 class="visually-hidden">фільтри проєтів</h1>
         <div class="conteiner">
+          <h1 class="visually-hidden">фільтри проєтів</h1>
           <ul class="filters">
-            <li class="filters-item"><button type="button" class="filters-button">Усі</button></li>
-            <li class="filters-item">
+            <li class="filter-item"><button type="button" class="filters-button">Усі</button></li>
+            <li class="filter-item">
               <button type="button" class="filters-button">Веб-сайти</button>
             </li>
-            <li class="filters-item">
+            <li class="filter-item">
               <button type="button" class="filters-button">Додатки</button>
             </li>
-            <li class="filters-item">
+            <li class="filter-item">
               <button type="button" class="filters-button">Дизайн</button>
             </li>
-            <li class="filters-item">
+            <li class="filter-item">
               <button type="button" class="filters-button">Маркетинг</button>
             </li>
           </ul>
@@ -72,9 +72,11 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-content">
                 <h2 class="project-title">Технокряк</h2>
                 <p class="project-text">Веб-сайт</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
@@ -84,11 +86,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-content">
                 <h2 class="project-title">
                   Постер <span lang="en">New Orlean vs Golden Star</span>
                 </h2>
                 <p class="project-text">Дизайн</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
@@ -98,51 +102,65 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-content">
                 <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="project-text">Додаток</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#">
                 <img src="./images/portfolio4.jpg" alt="наушники" width="370" height="294" />
+                <div class="project-content">
                 <h2 class="project-title">Проєкт <span lang="en">Prime</span></h2>
                 <p class="project-text">Маркетинг</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio5.jpg" alt="коробки" width="370" height="294" />
+                <div class="project-content">
                 <h2 class="project-title">Проєкт <span lang="en">Boxes</span></h2>
                 <p class="project-text">Додаток</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio6.jpg" alt="компютер" width="370" height="294" />
+                <div class="project-content">
                 <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
                 <p class="project-text">Веб-сайт</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio7.jpg" alt="книга" width="370" height="294" />
+                <div class="project-content">
                 <h2 class="project-title">Видання <span lang="en">Limited Edition</span></h2>
                 <p class="project-text">Дизайн</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio8.jpg" alt="етикетка" width="370" height="294" />
-                <h3 class="project-title">Проєкт <span lang="en">LAB</span></h3>
+                <div class="project-content">
+                <h2 class="project-title">Проєкт <span lang="en">LAB</span></h2>
                 <p class="project-text">Маркетинг</p></a
               >
+              </div>
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio9.jpg" alt="ноутбук" width="370" height="294" />
+                <div class="project-content">
                 <h2 lang="en" class="project-title">Growing Business</h2>
                 <p class="project-text">Додаток</p></a
               >
+              </div>
             </li>
           </ul>
         </div>
