--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
             <li class="filter-item">
               <button type="button" class="filters-button">Дизайн</button>
             </li>
-            <li class="filter-item">
+            <li class="filters-item">
               <button type="button" class="filters-button">Маркетинг</button>
             </li>
           </ul>
@@ -74,9 +74,9 @@
                 />
                 <div class="project-content">
                 <h2 class="project-title">Технокряк</h2>
-                <p class="project-text">Веб-сайт</p></a
+                <p class="project-text">Веб-сайт</p> </div> </a
               >
-              </div>
+              
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
@@ -90,9 +90,7 @@
                 <h2 class="project-title">
                   Постер <span lang="en">New Orlean vs Golden Star</span>
                 </h2>
-                <p class="project-text">Дизайн</p></a
-              >
-              </div>
+                <p class="project-text">Дизайн</p> </div> </a>              
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
@@ -104,63 +102,49 @@
                 />
                 <div class="project-content">
                 <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="project-text">Додаток</p></a
-              >
-              </div>
+                <p class="project-text">Додаток</p> </div> </a>             
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#">
                 <img src="./images/portfolio4.jpg" alt="наушники" width="370" height="294" />
                 <div class="project-content">
                 <h2 class="project-title">Проєкт <span lang="en">Prime</span></h2>
-                <p class="project-text">Маркетинг</p></a
-              >
-              </div>
+                <p class="project-text">Маркетинг</p> </div> </a>             
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio5.jpg" alt="коробки" width="370" height="294" />
                 <div class="project-content">
                 <h2 class="project-title">Проєкт <span lang="en">Boxes</span></h2>
-                <p class="project-text">Додаток</p></a
-              >
-              </div>
+                <p class="project-text">Додаток</p> </div> </a>             
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio6.jpg" alt="компютер" width="370" height="294" />
                 <div class="project-content">
                 <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
-                <p class="project-text">Веб-сайт</p></a
-              >
-              </div>
+                <p class="project-text">Веб-сайт</p> </div> </a>              
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio7.jpg" alt="книга" width="370" height="294" />
                 <div class="project-content">
                 <h2 class="project-title">Видання <span lang="en">Limited Edition</span></h2>
-                <p class="project-text">Дизайн</p></a
-              >
-              </div>
+                <p class="project-text">Дизайн</p> </div> </a>             
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio8.jpg" alt="етикетка" width="370" height="294" />
                 <div class="project-content">
                 <h2 class="project-title">Проєкт <span lang="en">LAB</span></h2>
-                <p class="project-text">Маркетинг</p></a
-              >
-              </div>
+                <p class="project-text">Маркетинг</p> </div> </a>              
             </li>
             <li class="projects-iteam">
               <a class="project-card" href="#"
                 ><img src="./images/portfolio9.jpg" alt="ноутбук" width="370" height="294" />
                 <div class="project-content">
                 <h2 lang="en" class="project-title">Growing Business</h2>
-                <p class="project-text">Додаток</p></a
-              >
-              </div>
+                <p class="project-text">Додаток</p> </div> </a>             
             </li>
           </ul>
         </div>
